updates FR translation

--- a/fr-FR/admin/fr-FR.com_eventgallery.ini
+++ b/fr-FR/admin/fr-FR.com_eventgallery.ini
@@ -1,3 +1,4 @@
+COM_EVENTGALLERY="Event Gallery"
 COM_EVENTGALLERY_EVENTGALLERY="Event Gallery"
 COM_EVENTGALLERY_CONFIGURATION="Event Gallery - Configuration"
 COM_EVENTGALLERY_MONEY_FORMAT="%2$.2f %1$s"
@@ -31,6 +32,29 @@ COM_EVENTGALLERY_SUBMENU_IMPEX="Import/Export"
 COM_EVENTGALLERY_SUBMENU_EMAILTEMPLATES="Modèle de courriel"
 COM_EVENTGALLERY_SUBMENU_EMAILTEMPLATES_DESC="Gérez vos modèles de courriel pour l'envoi de courriel de confirmation de commande."
 COM_EVENTGALLERY_SUBMENU_GOOGLEPHOTOSACCOUNTS="Comptes Google Photos"
+COM_EVENTGALLERY_SUBMENU_MESSAGES="Messages"
+COM_EVENTGALLERY_SUBMENU_DOWNLOADLOG="Télécharger les logs"
+COM_EVENTGALLERY_SUBMENU_DOWNLOADLOG_DESC="Liste des téléchargements"
+COM_EVENTGALLERY_SUBMENU_DOWNLOADLOG="Télécharger les logs"
+COM_EVENTGALLERY_SUBMENU_THUMBNAILGENERATOR="Créateur de miniature"
+COM_EVENTGALLERY_SUBMENU_GOOGLEPHOTOSACCOUNTS_DESC="Ajouter un compte Google"
+COM_EVENTGALLERY_SUBMENU_FLICKRACCOUNTS="Comptes Flick"
+COM_EVENTGALLERY_SUBMENU_FLICKRACCOUNTS_DESC="Ajouter un compte Flick"
+COM_EVENTGALLERY_FLICKRACCOUNT_NAME="Nom"
+COM_EVENTGALLERY_FLICKRACCOUNT_ACCOUNTDATA="Données du compte"
+COM_EVENTGALLERY_FLICKRACCOUNT_PRIVATEDATAACCESS="Peut accéder aux données privées"
+COM_EVENTGALLERY_FLICKRACCOUNTS="Compte Flick"
+
+COM_EVENTGALLERY_SYNC_STEP1="Charger les évènements"
+COM_EVENTGALLERY_SYNC_STEP2="Synchroniser les évènements"
+COM_EVENTGALLERY_SYNC_STEP3="Sychroniser les images"
+COM_EVENTGALLERY_SYNC_SELECT_AN_EVENT_HINT="Veuillez sélectionner au moins un événement."
+COM_EVENTGALLERY_SYNC_STEP2_ITEMS="Evènements"
+COM_EVENTGALLERY_SYNC_STEP3_ITEMS="Images"
+COM_EVENTGALLERY_SYNC_STOP_QUEUE="Stopper le processus"
+
+COM_EVENTGALLERY_CLEAR_CACHE_STOP_QUEUE="STOP"
+COM_EVENTGALLERY_MENUS_PRESET_EVENTGALLERY_MAIN
 
 COM_EVENTGALLERY_BATCH_OPTIONS="Traitement par lots des éléments sélectionnés"
 COM_EVENTGALLERY_BATCH_TIP="Utilisez cette boîte de dialogue pour définir un certain nombre d'options pour les événements sélectionnés."
@@ -134,6 +158,10 @@ COM_EVENTGALLERY_EVENT_MODIFIED="M"
 COM_EVENTGALLERY_EVENT_OPTIONS="Autres"
 COM_EVENTGALLERY_EVENT_METADATA="Metadata"
 COM_EVENTGALLERY_EVENT_PICASA_ABLUM_SELECTOR="Sélecteur d'album"
+COM_EVENTGALLERY_EVENTS_SOURCE="Source"
+COM_EVENTGALLERY_EVENTS_MAINIMAGE="Couverture"
+COM_EVENTGALLERY_EVENTS_ORDER_SAVE_LABEL="Enregistrer l'ordre"
+
 
 COM_EVENTGALLERY_EVENT_OPTIONS_SORTINGS_LABEL="Tri"
 COM_EVENTGALLERY_EVENT_OPTIONS_SORTINGS_DESC="Définissez une commande personnalisée pour les fichiers de cet événement. N'effectue que des fichiers locaux. Pour les images distantes, vous devez configurer la commande à distance."
@@ -401,7 +429,7 @@ COM_EVENTGALLERY_OPTIONS_COMMON_USESHARPENING_DESCRIPTION="Désactive ou permet 
 COM_EVENTGALLERY_OPTIONS_COMMON_USESHARPENING_FOR_ORIGINALSIZE_LABEL="Sharp Original"
 COM_EVENTGALLERY_OPTIONS_COMMON_USESHARPENING_FOR_ORIGINALSIZE_DESCRIPTION="Si l'image est livrée au navigateur dans la même taille que le fichier téléchargé, vous pouvez désactiver la netteté ici. Par défaut, les images téléchargées inférieures à 1600px seront affectées par ce paramètre. Pour toutes les autres images, des vignettes plus petites sont fournies et ce paramètre ne s'applique pas."
 COM_EVENTGALLERY_OPTIONS_COMMON_USEAUTOROTATE_LABEL="Utiliser la rotation automatique"
-COM_EVENTGALLERY_OPTIONS_COMMON_USEAUTOROTATE_DESCRIPTION="Fait pivoter les images en fonction de l'indicateur de rotation qui fait partie des informations EXIF stockées avec chaque image. Ne pas oublier de vider le cache et de synchroniser la base de données si vous changez cette option."
+COM_EVENTGALLERY_OPTIONS_COMMON_USEAUTOROTATE_DESCRIPTION="Fait pivoter les images en fonction de l'indicateur de rotation qui fait partie des informations EXIF \u200b\u200bstockées avec chaque image. Ne pas oublier de vider le cache et de synchroniser la base de données si vous changez cette option."
 COM_EVENTGALLERY_OPTIONS_COMMON_OVERWRITE_WITH_IPTC_DATA_LABEL="Écraser avec les données IPTC"
 COM_EVENTGALLERY_OPTIONS_COMMON_OVERWRITE_WITH_IPTC_DATA_DESCRIPTION="Si la valeur est Oui, le champ Légende et titre d'une image dans la base de données est remplacé par les données IPTC du fichier image. Sinon, les données IPTC ne sont utilisées que pour définir les champs initialement."
 COM_EVENTGALLERY_OPTIONS_COMMON_USE_IPTC_DATA_LABEL="Utiliser les données IPTC"
@@ -425,6 +453,20 @@ COM_EVENTGALLERY_OPTIONS_COMMON_USE_LAZYLOADING_FOR_IMAGES_DESCRIPTION="Par déf
 
 COM_EVENTGALLERY_OPTIONS_LAYOUT_EVENT="Événement - Général"
 COM_EVENTGALLERY_OPTIONS_LAYOUT_EVENT_DESC="Configurer les options utilisées pour toutes les présentations d'événements"
+
+COM_EVENTGALLERY_THUMBNAILGENERATOR_SYNC_LABEL="<strong>Thumbnail Generator</strong>"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_MAX_ITEMS_PER_BATCH_LABEL="Batch Size"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_MAX_ITEMS_PER_BATCH_DESC="Defines how many files we can sync with one request. Depending on your server speed you need to decrease that number to avoid timeouts."
+COM_EVENTGALLERY_THUMBNAILGENERATOR_MAX_PARALLEL_REQUESTS_LABEL="Parallel Requests"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_MAX_PARALLEL_REQUESTS_DESC="How many parallel Requests should your browser open. Up to 4 are supported, decrease it to decrease the server load"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_START2_DESC="Cette page affiche votre Amazon S3 et vos dossiers locaux. Nous avons besoin de vignettes pour chaque image que nous téléchargeons dans le compartiment d'images S3 d'origine. Utilisez les boutons ci-dessous pour rechercher les vignettes manquantes et les créer."
+COM_EVENTGALLERY_THUMBNAILGENERATOR_REFRESHETAGS_DESC="Actualisez les hachages des vignettes. Utilisez cette option pour écrire les valeurs de hachage des vignettes existantes dans la base de données. Ceci est très utile pour éviter de créer deux fois des vignettes si cela n’est pas nécessaire. Cela se produirait si deux serveurs différents accédaient à un compartiment. N'utilisez pas cette option si vous avez vraiment besoin de recréer des vignettes !"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_GETMISSINGTHUMBNAILS="Rechercher les miniatures manquantes"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_START="Start"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_STEP2_ITEMS="Evènements"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_STEP3_ITEMS="Images"
+COM_EVENTGALLERY_THUMBNAILGENERATOR_START_THUMBNAILCREATION="Créer miniatures"
+
 
 COM_EVENTGALLERY_OPTIONS_LAYOUT_EVENTS_LIST="Événements - Liste"
 COM_EVENTGALLERY_OPTIONS_LAYOUT_EVENTS_LIST_DESC="Configure la liste des événements."
@@ -601,9 +643,16 @@ COM_EVENTGALLERY_IMAGETYPESET_DESCRIPTION_DESCRIPTION="Une description général
 COM_EVENTGALLERY_IMAGETYPESET_NOTE="Note"
 COM_EVENTGALLERY_IMAGETYPESET_NOTE_DESCRIPTION="Une note pour cet ensemble d'images. Invisible dans la vitrine. Ceci est seulement pour vous."
 
+COM_EVENTGALLERY_IMAGETYPE_GROUP="Groupe"
+COM_EVENTGALLERY_IMAGETYPEGROUP_NAME="Nom"
+ COM_EVENTGALLERY_IMAGETYPEGROUPS="Groupes" 
+
 COM_EVENTGALLERY_METHOD_NAME="Nom"
 COM_EVENTGALLERY_METHOD_PRICING="Tarification"
 COM_EVENTGALLERY_METHOD_CLASSNAME_INVALID="La méthode %s %s utilise un nom de classe invalide %s. Cela empêchera le frontal de fonctionner."
+COM_EVENTGALLERY_METHOD_SUPPORTS_CART_TYPES="Paniers"
+COM_EVENTGALLERY_METHOD_SUPPORTS_MIXED="Mixte"
+COM_EVENTGALLERY_METHOD_SUPPORTS_PHYSICAL="Physique"
 
 COM_EVENTGALLERY_SURCHARGES="Suppléments"
 COM_EVENTGALLERY_SURCHARGE="Supplément"
@@ -624,13 +673,13 @@ COM_EVENTGALLERY_METHOD_TAXRATE_DESCRIPTION="Le taux de taxe en pourcentage (0-1
 COM_EVENTGALLERY_METHOD_PRICE="Prix"
 COM_EVENTGALLERY_METHOD_PRICE_DESCRIPTION="Le prix de cet article."
 COM_EVENTGALLERY_METHOD_PRICE_PERCENTAGED="Pourcentage du prix"
-COM_EVENTGALLERY_METHOD_PRICE_PERCENTAGED_DESCRIPTION="Le prix de cet article basé sur le sous-total du panier en pourcentage. Si le sous-total est 20€ et la valeur de ce champ est 25, le coût final de cette méthode est de 5€. Vous pouvez l'utiliser en combinaison avec le prix fixe."
+COM_EVENTGALLERY_METHOD_PRICE_PERCENTAGED_DESCRIPTION="Le prix de cet article basé sur le sous-total du panier en pourcentage. Si le sous-total est 20\u20ac et la valeur de ce champ est 25, le coût final de cette méthode est de 5\u20ac. Vous pouvez l'utiliser en combinaison avec le prix fixe."
 COM_EVENTGALLERY_METHOD_CURRENCY="Monnaie"
 COM_EVENTGALLERY_METHOD_CURRENCY_DESCRIPTION="La monnaie du prix"
 COM_EVENTGALLERY_METHOD_RULE="Règle"
 COM_EVENTGALLERY_METHOD_RULE_DESCRIPTION="Une règle qui décide quand cette surtaxe devrait intervenir."
 COM_EVENTGALLERY_METHOD_DATA="Donnée"
-COM_EVENTGALLERY_METHOD_DATA_DESCRIPTION="Certaines données pour la mise en oeuvre de l'élément spécifique."
+COM_EVENTGALLERY_METHOD_DATA_DESCRIPTION="Certaines données pour la mise en \u0153uvre de l'élément spécifique."
 COM_EVENTGALLERY_METHOD_DEFAULT="Défaut"
 COM_EVENTGALLERY_METHOD_DEFAULT_DESCRIPTION="Définit cette méthode par défaut."
 COM_EVENTGALLERY_METHOD_NEEDSADDRESSDATA="Adresse de données nécessaire"
@@ -714,6 +763,8 @@ COM_EVENTGALLERY_ORDERSTATUS_SYSTEMMANAGED="Système géré"
 COM_EVENTGALLERY_ORDERSTATUS_EDIT_SYSTEMMANAGED_ERROR="La modification d'un type de commande géré par le système n'est pas autorisée."
 COM_EVENTGALLERY_ORDERSTATUS_SETDEFAULT_FOR_NONORDER_ERROR="La définition d'une valeur par défaut est uniquement autorisée pour la commande ou non pour le paiement ou l'état de la commande d'expédition."
 
+COM_EVENTGALLERY_MENU_DOWNLOADLOG="Journaux"
+
 COM_EVENTGALLERY_SYNC_CHECK_NONE="Décocher tout"
 COM_EVENTGALLERY_SYNC_CHECK_ALL="Cocher tout"
 COM_EVENTGALLERY_SYNC_START2_DESC="Cette page est responsable de la synchronisation de vos fichiers physiques avec méta-informations stockées dans la base de données.<br><br>Veuillez sélectionner les dossiers que vous souhaitez synchroniser. Vous pouvez le faire pour tous les dossiers sans aucun problème. Si vous voulez gagner du temps, sélectionnez uniquement les dossiers ayant été modifiés. Une fois qu'un dossier est syncronisé vous verrez un certain nombre de fichiers qui ont besoin d'une certaine synchronisation aussi. <b>Appuyez sur le bouton <i>Synchroniser les fichiers</i></b> pour lancer le processus de synchronisation des fichiers. Alors que les fichiers locaux apparaissent toujours, les fichiers distants n'apparaissent que si le hachage distant du fichier original a été modifié.<br><br>Si vous utilisez Amazon S3 et que vous avez un nouveau dossier, vous pouvez gagner de la bande passante en créant les vignettes avant de les synchroniser. Chaque synchronisation entraînera un téléchargement complet du fichier original afin de pouvoir le traiter."
@@ -745,6 +796,8 @@ COM_EVENTGALLERY_OVERVIEW_STATISTICS_CARTS="Paniers"
 COM_EVENTGALLERY_OVERVIEW_STATISTICS_CARTS_CLEANUP="nettoyer"
 COM_EVENTGALLERY_OVERVIEW_STATISTICS_CARTS_CLEANUP_TITLE="En cliquant sur ce lien, les anciens paniers sont supprimés de la base de données."
 COM_EVENTGALLERY_OVERVIEW_STATISTICS_ORDERS="Commandes"
+COM_EVENTGALLERY_OVERVIEW_STATISTICS_DOWNLOADS="Nombre de téléchargements"
+COM_EVENTGALLERY_OVERVIEW_NUMBER_OF_MISSING_THUMBNAILS="Nombre de miniatures absentes"
 
 
 COM_EVENTGALLERY_WATERMARK_NAME_DESCRIPTION="Le nom du filigrane"
@@ -859,7 +912,7 @@ COM_EVENTGALLERY_EMAILTEMPLATES_ERROR_CHOOSE_TEMPLATE="Veuillez choisir un modè
 COM_EVENTGALLERY_EMAILTEMPLATE="Modèle de courriel"
 COM_EVENTGALLERY_EMAILTEMPLATE_OPTIONS_DETAILS_LABEL="Détails"
 COM_EVENTGALLERY_EMAILTEMPLATE_OPTIONS_DETAILS_DESC="Entrez les détails de ce modèle de courriel. Utilisez la section d'aperçu ci-dessous pour voir ce que vous avez fait. Si vous définissez le rapport d'erreurs pour afficher les notifications, vous verrez des erreurs possibles dans votre modèle de courriel. Consultez le manuel de Smarty pour les détails de la langue.<br><br>Si vous enregistrez le modèle, vous obtiendrez un aperçu basé sur certaines données de démonstration. Cliquez sur le bouton Charger par défaut pour charger le modèle par défaut à cette fin. Assurez-vous de sauvegarder vos modifications pour actualiser l'aperçu."
-COM_EVENTGALLERY_EMAILTEMPLATE_LANGUAGE="Langue"
+COM_EVENTGALLERY_EMAILTEMPLATE_LANGUAGE="Langage"
 COM_EVENTGALLERY_EMAILTEMPLATE_LANGUAGE_DESCRIPTION="La langue pour laquelle ce modèle est valide."
 COM_EVENTGALLERY_EMAILTEMPLATE_PUBLISHED="Publié"
 COM_EVENTGALLERY_EMAILTEMPLATE_PUBLISHED_DESCRIPTION="Ce modèle devrait-il être utilisé?"
@@ -890,7 +943,7 @@ COM_EVENTGALLERY_SYSTEMCHECK_ISSUES="Problèmes"
 COM_EVENTGALLERY_SYSTEMCHECK_DATABASE_STATUS="Etat"
 COM_EVENTGALLERY_SYSTEMCHECK_DATABASE_STATUS_OK="Oui"
 COM_EVENTGALLERY_SYSTEMCHECK_DATABASE_STATUS_SKIPPED="Sauté"
-COM_EVENTGALLERY_SYSTEMCHECK_DATABASE_STATUS_ERROR="Errerr"
+COM_EVENTGALLERY_SYSTEMCHECK_DATABASE_STATUS_ERROR="Erreur"
 COM_EVENTGALLERY_SYSTEMCHECK_DATABASE_STATUS_UNCHECKED="Non coché"
 COM_EVENTGALLERY_SYSTEMCHECK_PHPVERSION="Version PHP"
 COM_EVENTGALLERY_SYSTEMCHECK_MEMORY_LIMIT="Limite de la mémoire"
@@ -915,7 +968,7 @@ COM_EVENTGALLERY_STOREAGE_S3_CREDENTIALS_KEY_DESC="La clé pour accéder au stoc
 COM_EVENTGALLERY_STOREAGE_S3_CREDENTIALS_SECRET_LABEL="Secret S3"
 COM_EVENTGALLERY_STOREAGE_S3_CREDENTIALS_SECRET_DESC="Le secret de votre compte de stockage S3"
 COM_EVENTGALLERY_STOREAGE_S3_BUCKET_ORIGINALS_LABEL="Compartiment S3"
-COM_EVENTGALLERY_STOREAGE_S3_BUCKET_ORIGINALS_DESC="Ceci définit le nom du compartiment qui contient vos fichiers d'image originaux."
+COM_EVENTGALLERY_STOREAGE_S3_BUCKET_ORIGINALS_DESC="Ceci définit le nom du compartiment qui contient vos fichiers d\u2019image originaux."
 COM_EVENTGALLERY_STOREAGE_S3_BUCKET_RESIZED_LABEL="Vignettes du compartiment S3"
 COM_EVENTGALLERY_STOREAGE_S3_BUCKET_RESIZED_DESC="Ce champ définit le nom du compartiment que vous souhaitez utiliser pour les vignettes générées."
 COM_EVENTGALLERY_STOREAGE_S3_RESIZE_API_URL_LABEL="Redimensionner l'URL de l'API"
@@ -1001,6 +1054,26 @@ COM_EVENTGALLERY_GOOGLEPHOTOSACCOUNT_ORDER="Commande"
 COM_EVENTGALLERY_GOOGLEPHOTOSACCOUNT_COMPLETED="Complète"
 COM_EVENTGALLERY_GOOGLEPHOTOSACCOUNT_REFRESHTOKEN_BUTTON_LABEL="Obtenir le jeton actualisé"
 COM_EVENTGALLERY_GOOGLEPHOTOSACCOUNT_REFRESHTOKEN_CLIENT_CREDENTIALS_MISSING_LABEL="S'il vous plaît ajouter ClientID et secret. Après avoir enregistré la configuration, vous pouvez récupérer le jeton d'actualisation. <a href=\"https://www.svenbluege.de/joomla-event-gallery/event-gallery-manual/edit-event-google-photos\"> Manuel: comment utiliser Google Photos </a>"
+COM_EVENTGALLERY_GOOGLEPHOTOSACCOUNTS_HELP_PUBLISH_APP="N'oubliez pas de publier votre application Google. Sinon, les tokens ne sont valables que 7 jours. Pas de token, pas d'images sur votre site."
 
 COM_EVENTGALLERY_FIELD_FOLDERTYPE_GOOGLEPHOTOS_ALBUM="Album"
 COM_EVENTGALLERY_FIELD_FOLDERTYPE_GOOGLEPHOTOS_ACCOUNT="Compte Google Photos"
+
+COM_EVENTGALLERY_DOWNLOADLOG="Télécharger Journaux"
+COM_EVENTGALLERY_DOWNLOADLOG_DESCRIPTION="Liste des utilisateurs ayant téléchargé"
+COM_EVENTGALLERY_DOWNLOADLOG_TYPE="Type"
+COM_EVENTGALLERY_DOWNLOADLOG_YEAR="Année"
+COM_EVENTGALLERY_DOWNLOADLOG_MONTH="Mois"
+COM_EVENTGALLERY_DOWNLOADLOG_USERTYPE="Tous les utilisateurs"
+COM_EVENTGALLERY_DOWNLOADLOG_USERTYPE_REG="Utilisateurs enregistrés"
+COM_EVENTGALLERY_DOWNLOADLOG_USERTYPE_UNREG="Invités"
+COM_EVENTGALLERY_DOWNLOADLOG_ISBOT="Bots"
+COM_EVENTGALLERY_DOWNLOADLOG_ISBOT_YES="Oui"
+COM_EVENTGALLERY_DOWNLOADLOG_ISBOT_NO="Non"
+COM_EVENTGALLERY_DOWNLOADLOG_TYPES_DOWNLOAD_FULL="Télécharger les grandes miniatures"
+COM_EVENTGALLERY_DOWNLOADLOG_TYPES_DOWNLOAD_ORIGINAL="Télécharger les images originales"
+COM_EVENTGALLERY_DOWNLOADLOG_TYPES_PURCHASE="Acheter"
+COM_EVENTGALLERY_DOWNLOADLOG_DOWNLOADBUTTON_ALT="Exporter"
+COM_EVENTGALLERY_DOWNLOADLOG_NOT_ENABLED="Le téléchargement de journaux est désactivé. Vous pouvez changer le réglage dans les options du composant."
+COM_EVENTGALLERY_DOWNLOADLOG_CONFIG_LABEL="Utiliser le téléchargement de journaux"
+COM_EVENTGALLERY_DOWNLOADLOG_CONFIG_DESC="Le téléchargement de journaux est activé, vous pouvez voir qui a téléchargé des images."
