--- a/fr-FR/admin/fr-FR.com_eventgallery.sys.ini
+++ b/fr-FR/admin/fr-FR.com_eventgallery.sys.ini
@@ -5,6 +5,19 @@ COM_EVENTGALLERY_MENU_EVENTS="Gestion des événements"
 COM_EVENTGALLERY_MENU_CLEAR_CACHE="Effacer le cache"
 COM_EVENTGALLERY_MENU_SYNC_DATABASE="Synchroniser la base de données"
 COM_EVENTGALLERY_MENU_ORDERS="Gestion des commandes"
+COM_EVENTGALLERY_MENUS_PRESET_EVENTGALLERY="Préréglages - Event Gallery"
+COM_EVENTGALLERY_MENUS_PRESET_EVENTGALLERY_MAIN="Tâches principales"
+COM_EVENTGALLERY_MENUS_PRESET_EVENTGALLERY_CONFIGURATION_GENERAL="Configuration"
+COM_EVENTGALLERY_MENUS_PRESET_EVENTGALLERY_CONFIGURATION_ORDER="Configuration liée à la commande"
+COM_EVENTGALLERY_MENUS_PRESET_EVENTGALLERY_MISC="Divers"
+COM_EVENTGALLERY_MENUS_PRESET_EVENTGALLERY_TOOLS="Outils"
+COM_EVENTGALLERY_MENU_OPTIONS="Event Gallery Options"
+COM_EVENTGALLERY_MENU_OVERVIEW="Aperçu"
+COM_EVENTGALLERY_MENU_ORDERS="Ordres"
+COM_EVENTGALLERY_MENU_DOWNLOADLOG="Télécharger journaux"
+COM_EVENTGALLERY_MENU_SEPARATOR_1=" "
+COM_EVENTGALLERY_MENU_SEPARATOR_2=" "
+COM_EVENTGALLERY_MENU_SEPARATOR_3=" "
 
 
 COM_EVENTGALLERY_VIEW_EVENT="Événement"
